--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>ndimensional</title>
-    <link rel="import" href="level1.html?v=1">
-    <link rel="import" href="level2.html?v=1">
+    <link rel="import" href="level1.html">
+    <link rel="import" href="level2.html">
 </head>
 <body>
     <p>This is the main body</p>
