--- a/level1.html
+++ b/level1.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Level 1</title>
-    <link rel="import" href="node.html?v=1">
-    <link rel="import" href="level2.html?v=1">
+    <link rel="import" href="node.html">
+    <link rel="import" href="level2.html">
 </head>
 <body>
     <p>This is a header that should be be transcluded</p>
