--- a/level2.html
+++ b/level2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Level 2</title>
-    <link rel="import" href="node.html?v=1">
+    <link rel="import" href="node.html">
 </head>
 <body>
     <p>This is Level Two's invisible header</p>
