--- a/level2.html
+++ b/level2.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <p>This is Level Two's invisible header</p>
-    <x-node name="level-two">
+    <root-node name="level-two">
         <p>This is Level Two!</p>
         <p>Ted Nelson would be proud</p>
-    </x-node>
+    </root-node>
     <p>This is Level Two's footer</p>
     <p>Click <a href="/">here</a> to go up to the root level</p>
 </body>
