--- a/node.html
+++ b/node.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 </head>
 <script>
-    customElements.define('x-node', class extends HTMLElement {
+    customElements.define('root-node', class extends HTMLElement {
         constructor() {
             super();
         }
