--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>ndimensional</title>
-    <link rel="import" href="level1.html">
-    <link rel="import" href="level2.html">
+    <link rel="import" href="level-one.html">
+    <link rel="import" href="level-two.html">
 </head>
 <body>
     <p>This is the main body</p>
-    <p>Here's <a href="level1.html">Level One</a> transcluded from the root page:</p>
+    <p>Here's <a href="level-one.html">Level One</a> transcluded from the root page:</p>
     <level-one></level-one>
-    <p>And here's <a href="level2.html">Level Two</a> transcluded from the root page:</p>
+    <p>And here's <a href="level-two.html">Level Two</a> transcluded from the root page:</p>
     <level-two></level-two>
     <p>Hopefully those things transcluded successfully</p>
     <p>Wow neat look at the fun things we can do</p>
