--- a/level-two.html
+++ b/level-two.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Level 2</title>
-    <link rel="import" href="node.html">
+    <link rel="import" href="root-node.html">
 </head>
 <body>
     <p>This is Level Two's invisible header</p>
@@ -12,6 +12,6 @@
         <p>Ted Nelson would be proud</p>
     </root-node>
     <p>This is Level Two's footer</p>
-    <p>Click <a href="/">here</a> to go up to the root level</p>
+    <p>Click <a href="index.html">here</a> to go up to the root level</p>
 </body>
 </html>
