--- a/thing-two.html
+++ b/thing-two.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <p>This is Level Two's invisible header</p>
-    <root-node name="level-two">
+    <root-node name="thing-two">
         <p>This is Level Two!</p>
         <p>Ted Nelson would be proud</p>
     </root-node>
