--- a/thing-one.html
+++ b/thing-one.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <title>Level 1</title>
     <link rel="import" href="root-node.html">
-    <link rel="import" href="level-two.html">
+    <link rel="import" href="thing-two.html">
 </head>
 <body>
     <p>This is a header that should be be transcluded</p>
-    <root-node name="level-one">
+    <root-node name="thing-one">
         <p>Hello this is Level One</p>
         <p>Notice that there are multiple elements</p>
-        <p>Here's <a href="level-two.html">Level Two</a> transcluded from Level One:</p>
-        <level-two></level-two>
+        <p>Here's <a href="thing-two.html">Level Two</a> transcluded from Level One:</p>
+        <thing-two></thing-two>
     </root-node>
     <p>This is a footer that also should not be transcluded</p>
     <p>Click <a href="index.html">here</a> to go up to the root level</p>
