--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <p>This is the main body</p>
     <p>Here's <a href="thing-one.html">Level One</a> transcluded from the root page:</p>
-    <level-one></level-one>
+    <thing-one></thing-one>
     <p>And here's <a href="thing-two.html">Level Two</a> transcluded from the root page:</p>
-    <level-two></level-two>
+    <thing-two></thing-two>
     <p>Hopefully those things transcluded successfully</p>
     <p>Wow neat look at the fun things we can do</p>
 </body>
