the last of the things

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <p>This is the main body</p>
-    <p>Here's <a href="thing-one.html">Level One</a> transcluded from the root page:</p>
+    <p>Here's <a href="thing-one.html">Thing One</a> transcluded from the root thing:</p>
     <thing-one></thing-one>
-    <p>And here's <a href="thing-two.html">Level Two</a> transcluded from the root page:</p>
+    <p>And here's <a href="thing-two.html">Thing Two</a> transcluded from the root thing:</p>
     <thing-two></thing-two>
     <p>Hopefully those things transcluded successfully</p>
     <p>Wow neat look at the fun things we can do</p>
