--- a/thing-two.html
+++ b/thing-two.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Level 2</title>
+    <title>Thing Two</title>
     <link rel="import" href="root-node.html">
 </head>
 <body>
-    <p>This is Level Two's invisible header</p>
+    <p>This is Thing Two's invisible header that won't be transcluded</p>
     <root-node name="thing-two">
-        <p>This is Level Two!</p>
+        <p>This is Thing Two!</p>
         <p>Ted Nelson would be proud</p>
     </root-node>
-    <p>This is Level Two's footer</p>
-    <p>Click <a href="index.html">here</a> to go up to the root level</p>
+    <p>This is Thing Two's footer</p>
+    <p>Click <a href="index.html">here</a> to go up to the root thing</p>
 </body>
 </html>
