things 2: electric boogaloo

--- a/thing-two.html
+++ b/thing-two.html
@@ -11,7 +11,7 @@
         <p>This is Thing Two!</p>
         <p>Ted Nelson would be proud</p>
     </root-node>
-    <p>This is Thing Two's footer</p>
+    <p>This is Thing Two's footer that also won't be transcluded</p>
     <p>Click <a href="index.html">here</a> to go up to the root thing</p>
 </body>
 </html>
