--- a/thing-one.html
+++ b/thing-one.html
@@ -7,14 +7,14 @@
     <link rel="import" href="thing-two.html">
 </head>
 <body>
-    <p>This is a header that should be be transcluded</p>
+    <p>This is a header that won't be transcluded</p>
     <root-node name="thing-one">
         <p>Hello this is Thing One</p>
         <p>Notice that there are multiple elements</p>
         <p>Here's <a href="thing-two.html">Thing Two</a> transcluded from Thing One:</p>
         <thing-two></thing-two>
     </root-node>
-    <p>This is a footer that also should not be transcluded</p>
+    <p>This is a footer that also won't be transcluded</p>
     <p>Click <a href="index.html">here</a> to go up to the root thing</p>
 </body>
 </html>
