--- a/index.html
+++ b/index.html
@@ -3,16 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>ndimensional</title>
-    <link rel="import" href="thing-one.html">
-    <link rel="import" href="thing-two.html">
+    <link rel="import" href="transclusion.html">
 </head>
 <body>
-    <p>This is the main body</p>
-    <p>Here's <a href="thing-one.html">Thing One</a> transcluded from the root thing:</p>
-    <thing-one></thing-one>
-    <p>And here's <a href="thing-two.html">Thing Two</a> transcluded from the root thing:</p>
-    <thing-two></thing-two>
-    <p>Hopefully those things transcluded successfully</p>
-    <p>Wow neat look at the fun things we can do</p>
+    <article>
+        <h1>HTML Transclusions</h1>
+        <p><a href="/">Joel Gustafson</a></p>
+        <section>
+            <p>"Transcluding" is a word Ted Nelson made up to describe a thing that is both a quote and a hyperlink (or "jump link" if you have no friends).</p>
+            <p>Usually we don't do that because it's only possible with iframes and those are scary.</p>
+            <p>But hold my beer, imma transclude some stuff with WebComponents!</p>
+            <p>Here's <a href="thing-one.html">Thing One</a> transcluded from this root thing:</p>
+            <html-import shadow href="thing-one.html"></html-import>
+            <p>And here's <a href="thing-two.html">Thing Two</a> transcluded from this root thing:</p>
+            <html-import shadow href="thing-two.html"></html-import>
+            <p>Wow neat cool fun things we can do with WebComponents!</p>
+            <p>Lookit the source code <a href="https://github.com/joeltg/ndimensional">here</a>.</p>
+        </section>
+    </article>
+
 </body>
 </html>
