--- a/thing-two.html
+++ b/thing-two.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Thing Two</title>
-    <link rel="import" href="root-node.html">
+    <link rel="import" href="transclusion.html">
 </head>
 <body>
     <p>This is Thing Two's invisible header that won't be transcluded</p>
-    <root-node name="thing-two">
+    <html-export>
         <p>This is Thing Two!</p>
         <p>Ted Nelson would be proud</p>
-    </root-node>
+    </html-export>
     <p>This is Thing Two's footer that also won't be transcluded</p>
     <p>Click <a href="index.html">here</a> to go up to the root thing</p>
 </body>
