--- a/transclusion.html
+++ b/transclusion.html
@@ -8,8 +8,13 @@
     html-import {
         display: block;
         padding: 16px;
-        margin-right: 16px;
+        width: 55%;
         border: 1px solid black;
+    }
+    @media (max-width: 760px) {
+        html-import {
+            width: inherit;
+        }
     }
 </style>
 <script>
