--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <title>ndimensional</title>
     <link rel="import" href="transclusion.html">
@@ -17,7 +18,7 @@
                 <input type="checkbox" checked id="browsers-suck" class="margin-toggle">
                 <span class="marginnote">
                     You need Chrome 55+ or FireFox Beta at the moment.
-                    Complain to your state senator.
+                    Complain to your state <senator class=""></senator>
                 </span>
                 But hold my beer, imma transclude some stuff with WebComponents!
             </p>
