--- a/transclusion.html
+++ b/transclusion.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/styles/tufte.css">
+<!--     <link rel="stylesheet" href="/styles/tufte.css"> -->
 </head>
 <style>
     html-import {
