--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
                 <input type="checkbox" checked id="browsers-suck" class="margin-toggle">
                 <span class="marginnote">
                     You need Chrome 55+ or FireFox Beta at the moment.
-                    Complain to your state <senator class=""></senator>
+                    Complain to your state senator.
                 </span>
+            </p>
+            <p>
                 But hold my beer, imma transclude some stuff with WebComponents!
             </p>
             <p>Here's <a href="thing-one.html">Thing One</a> transcluded from this root thing:</p>
