--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ndimensional</title>
+    <title>HTML Transclusions: Joel Gustafson</title>
     <link rel="import" href="transclusion.html">
 </head>
 <body>
