--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <p>Usually we don't do that because it's only possible with iframes and those are scary.</p>
             <p>
                 <label for="browsers-suck" class="margin-toggle">⊕</label>
-                <input type="checkbox" checked id="browsers-suck" class="margin-toggle">
+                <input checked type="checkbox" checked id="browsers-suck" class="margin-toggle">
                 <span class="marginnote">
                     You need Chrome 55+ or FireFox Beta at the moment.
                     Complain to your state senator.
