--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <html-import shadow href="thing-one.html"></html-import>
             <p>And here's <a href="thing-two.html">Thing Two</a> transcluded from this root thing:</p>
             <html-import shadow href="thing-two.html"></html-import>
-            <p>Wow neat cool fun things we can do with WebComponents! But if you try recursion, God rips the wings off an angel, so don't do that.</p>
+            <p>Wow, what neat cool fun things we can do with WebComponents!</p>
             <p>Lookit the source code <a href="https://github.com/joeltg/transclusion">here</a>.</p>
         </section>
     </article>
