--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </span>
             </p>
             <p>
-                But hold my beer, imma transclude some stuff with WebComponents!
+                But hold my beer, imma transclude some stuff with WebComponents & HTML Imports!
             </p>
             <p>Here's <a href="thing-one.html">Thing One</a> transcluded from this root thing:</p>
             <html-import shadow href="thing-one.html"></html-import>
