no time to think of consequences

--- a/thing-one.html
+++ b/thing-one.html
@@ -13,7 +13,7 @@
         <html-import shadow href="thing-two.html"></html-import>
     </html-export>
     <p>This is a footer that also won't be transcluded</p>
-    <p>If we were using iframes we wouldn't be able to selective include/exclude parts like this, so that's neat</p>
+    <p>If we were using iframes we wouldn't be able to selectively include/exclude parts like this, or export multiple named elements, so that's pretty cool</p>
     <p>Click <a href="index.html">here</a> to go up to the root thing</p>
 </body>
 </html>
