--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <h1>HTML Transclusions</h1>
         <p><a href="/">Joel Gustafson</a></p>
         <section>
-            <p>"Transclusion" is a word Ted Nelson made up to describe a thing that is both a quote and a hyperlink (or "jump link" if you have no friends).</p>
-            <p>Usually we don't do that because it's only possible with iframes and those are scary.</p>
+            <p>"Transclusion" is a word Ted Nelson made up to describe a thing that is both a quote and a hyperlink (or "jump link" if you have no friends) - you can think of it like individual DOM element import / export from external pages.</p>
+            <p>Usually we don't do that because it's only possible with iframes and those are scary (and atomic at page level).</p>
             <p>
                 <label for="browsers-suck" class="margin-toggle">⊕</label>
                 <input checked type="checkbox" checked id="browsers-suck" class="margin-toggle">
